fix(ui): secondary labels inline using flex-wrap

--- a/src/pages/sections/projects-secondary.css
+++ b/src/pages/sections/projects-secondary.css
@@ -39,7 +39,7 @@
   padding: 0 25px;
   padding-bottom: 10px;
   display: flex;
-  
+  flex-wrap: wrap;
 }
 
 .ProjectsSecondary .tags > span {
@@ -48,7 +48,7 @@
   color: #9FEDEA;
   letter-spacing: 0;
   text-align: justify;
-  margin-right: 15px;
+  line-height: 2;
 }
 
 .ProjectsSecondary .links {
